Update Regression cost mode

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,104 @@
+% - - - - - - - - - -
+% Regression cost model
+% - - - - - - - - - -
+@article{Jiang2015,
+    abstract = {Software testing aims to search a set of test data in the entire search space to satisfy a certain standard of coverage. Therefore, finding an effective approach for automatic test data generation is a key issue of software testing. This paper proposes a new approach of reduced adaptive particle swarm optimization for generating the test data automatically. First, the approach reduces the particle swarm evolution equations and gets an evolution equation without velocity. Then, the approach makes an adaptive adjustment scheme based on inertia weight for the reduced evolution equation, which is different from the methods that directly act on the particle velocity in the past. The approach directly impacts on the particle position, namely actual problem solution. Next, according to the particle fitness and the particle aggregation degree, the population will be divided into three parts and inertia weight of each part will be designed accordingly. This can balance the search capabilities of algorithm between global and local. Finally, the approach is applied to automatic test data generation. The experiments results show that our approach can enhance convergence speed of algorithm and solve the problems that particle swarm algorithm easily falls into the local optimal solution and has low search accuracy. The experiments results also turn out that our approach can improve the efficiency of generating test data automatically.},
+    author = {Jiang, Shujuan and Shi, Jiaojiao and Zhang, Yanmei and Han, Han},
+    doi = {10.1016/j.neucom.2015.01.062},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Test-data-gen/1-s2.0-S0925231215001095-main.pdf:pdf},
+    isbn = {0925-2312},
+    issn = {18728286},
+    journal = {Neurocomputing},
+    keywords = {Adaptive adjustment scheme,Inertia weight,Particle aggregation degree,Particle swarm algorithm,Test data generation},
+    mendeley-groups = {Test data generate},
+    pages = {109--116},
+    publisher = {Elsevier},
+    title = {{Automatic test data generation based on reduced adaptive particle swarm optimization algorithm}},
+    url = {http://dx.doi.org/10.1016/j.neucom.2015.01.062},
+    volume = {158},
+    year = {2015}
+}
+@article{Lemos2013,
+    abstract = {This paper reports on a historical perspective of the evaluation studies present in software testing research published in the Brazilian Symposium on Software Engineering (SBES) in comparison to the International Conference on Software Engineering (ICSE). The survey characterizes the software testing-related papers published in the 25-year history of SBES, investigates the types of evaluation presented in these publications, and how the rate of evaluations has evolved over the years. A similar analysis within the same period is made for ICSE, allowing for a comparison between the national and international scenario. Results show that the rate of papers that present evaluation studies in SBES has significantly increased over the years. However, among the papers that described some kind of evaluation, only around 20{\%} performed more rigorous evaluations (i.e. case studies, quasi experiments, or controlled experiments). Such percentage is low when compared to ICSE, which presented 40{\%} of papers with more rigorous evaluations within the same period. Nevertheless, we noticed that both venues still lack the publication of research reporting controlled experiments: only a single paper in each conference presented this type of evaluation. ?? 2012 Elsevier Inc.},
+    author = {Lemos, Ot{\'{a}}vio Augusto Lazzarini and Ferrari, Fabiano Cutigi and Eler, Marcelo Medeiros and Maldonado, Jos{\'{e}} Carlos and Masiero, Paulo Cesar},
+    doi = {10.1016/j.jss.2012.11.040},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Test-data-gen/1-s2.0-S0164121212003238-main.pdf:pdf},
+    issn = {01641212},
+    journal = {Journal of Systems and Software},
+    keywords = {Evaluation studies,Software testing,Software testing research in Brazil},
+    mendeley-groups = {Test data generate},
+    number = {4},
+    pages = {951--969},
+    publisher = {Elsevier Inc.},
+    title = {{Evaluation studies of software testing research in Brazil and in the world: A survey of two premier software engineering conferences}},
+    url = {http://dx.doi.org/10.1016/j.jss.2012.11.040},
+    volume = {86},
+    year = {2013}
+}
+@article{Mohi-Aldeen2016,
+    author = {Mohi-Aldeen, Shayma Mustafa and Mohamad, Radziah and Deris, Safaai},
+    doi = {10.1016/j.asoc.2016.09.044},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Test-data-gen/1-s2.0-S1568494616305038-main.pdf:pdf},
+    issn = {15684946},
+    journal = {Applied Soft Computing},
+    mendeley-groups = {Test data generate},
+    publisher = {Elsevier B.V.},
+    title = {{Application of Negative Selection Algorithm (NSA) for Test Data Generation of Path Testing}},
+    url = {http://linkinghub.elsevier.com/retrieve/pii/S1568494616305038},
+    year = {2016}
+}
+@article{Nie2015,
+    abstract = {Context: Software behavior depends on many factors, and some failures occur only when certain factors interact. This is known as an interaction triggered failure, and the corresponding selection of factor values can be modeled as a Minimal Failure-causing Schema (MFS). (An MFS involving m factors is an m-MFS.) Combinatorial Testing (CT) has been developed to exercise ("hit") all MFS with few tests. Adaptive Random Resting (ART) endeavors to make tests as different as possible, ensuring that testing of MFS is not unnecessarily repeated. Random Testing (RT) chooses tests at random without regard to the MFS already treated. CT might be expected to improve on RT for finding interaction triggered faults, and yet some studies report no significant difference. CT can also be expected to be better than ART, and yet other studies report that ART can be much better than RT. In light of these, the relative merits of CT, ART, and RT for finding interaction triggered faults are unclear. Objective: To investigate the relationships among CT, ART, and RT, we conduct the first complete and systematic comparison for the purpose of hitting MFS. Method: A systematic review of six aspects of CT, RT and ART is conducted first. Then two kinds of experiments are used to compare them under four metrics. Results: ART improves upon RT, but t-way CT is better than both. In hitting t'-MFS the advantage is typically in the range from 10{\%} to 30{\%} when t = t', but becomes much smaller when t' {\textless} t, and there may be no advantage when t' {\textgreater} t. The latter case may explain the studies reporting no significant difference between RT and CT. Conclusion: RT is easily implemented. However, depending on its implementation, ART can improve upon RT. CT does as well as ART whether or nott' = t, but provides a valuable improvement in the cases when t' = t.},
+    author = {Nie, Changhai and Wu, Huayao and Niu, Xintao and Kuo, Fei Ching and Leung, Hareton and Colbourn, Charles J.},
+    doi = {10.1016/j.infsof.2015.02.008},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Test-data-gen/1-s2.0-S0950584915000440-main.pdf:pdf},
+    isbn = {0950-5849},
+    issn = {09505849},
+    journal = {Information and Software Technology},
+    keywords = {Adaptive Random Testing (ART),Combinatorial Testing (CT),Interaction Triggered Failure (ITF),Minimal Failure-causing Schema (MFS),Software testing Random Testing (RT)},
+    mendeley-groups = {Test data generate},
+    number = {1},
+    pages = {198--213},
+    publisher = {Elsevier B.V.},
+    title = {{Combinatorial testing, random testing, and adaptive random testing for detecting interaction triggered failures}},
+    url = {http://dx.doi.org/10.1016/j.infsof.2015.02.008},
+    volume = {62},
+    year = {2015}
+}
+@article{Shahbaz2015,
+    abstract = {Classic approaches to automatic input data generation are usually driven by the goal of obtaining program coverage and the need to solve or find solutions to path constraints to achieve this. As inputs are generated with respect to the structure of the code, they can be ineffective, difficult for humans to read, and unsuitable for testing missing implementation. Furthermore, these approaches have known limitations when handling constraints that involve operations with string data types. This paper presents a novel approach for generating string test data for string validation routines, by harnessing the Internet. The technique uses program identifiers to construct web search queries for regular expressions that validate the format of a string type (such as an email address). It then performs further web searches for strings that match the regular expressions, producing examples of test cases that are both valid and realistic. Following this, our technique mutates the regular expressions to drive the search for invalid strings, and the production of test inputs that should be rejected by the validation routine. The paper presents the results of an empirical study evaluating our approach. The study was conducted on 24 string input validation routines collected from 10 open source projects. While dynamic symbolic execution and search-based testing approaches were only able to generate a very low number of values successfully, our approach generated values with an accuracy of 34{\%} on average for the case of valid strings, and 99{\%} on average for the case of invalid strings. Furthermore, whereas dynamic symbolic execution and search-based testing approaches were only capable of detecting faults in 8 routines, our approach detected faults in 17 out of the 19 validation routines known to contain implementation errors.},
+    author = {Shahbaz, Muzammil and McMinn, Phil and Stevenson, Mark},
+    doi = {10.1016/j.scico.2014.04.008},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Test-data-gen/1-s2.0-S0167642314001725-main.pdf:pdf},
+    issn = {01676423},
+    journal = {Science of Computer Programming},
+    keywords = {Regular expressions,Test data generation,Web searches},
+    mendeley-groups = {Test data generate},
+    number = {P4},
+    pages = {405--425},
+    publisher = {Elsevier B.V.},
+    title = {{Automatic generation of valid and invalid test data for string validation routines using web searches and regular expressions}},
+    url = {http://dx.doi.org/10.1016/j.scico.2014.04.008},
+    volume = {97},
+    year = {2015}
+}
+@article{Al-Refai2016,
+    author = {Al-Refai, Mohammed and Ghosh, Sudipto and Cazzola, Walter},
+    doi = {10.1109/ICST.2016.24},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Regression/07515480.pdf:pdf},
+    isbn = {9781509018260},
+    journal = {Proceedings - 2016 IEEE International Conference on Software Testing, Verification and Validation, ICST 2016},
+    keywords = {JUnit tests,executable UML models,model-based dynamic adaptation,model-based regression test selection,model-based validation,unanticipated adaptation},
+    mendeley-groups = {Test data generate},
+    number = {3},
+    pages = {288--298},
+    title = {{Model-Based Regression Test Selection for Validating Runtime Adaptation of Software Systems}},
+    year = {2016}
+}
+
+% - - - - - - - - - -
+% Other
+% - - - - - - - - - -
 @article{HHailpern2002ailpern2002,
     abstract = {In commercial software development organizations, increased complexity of products, shortened development cycles, and higher customer expectations of quality have placed a major responsibility on the areas of software debugging, testing, and verification. As this issue of the IBM Systems Journal illustrates, there are exciting improvements in the underlying technology on all three fronts. However, we observe that due to the informal nature of software development as a whole, the prevalent practices in the industry are still immature, even in areas where improved technology exists. In addition, tools that incorporate the more advanced aspects of this technology are not ready for large-scale commercial use. Hence there is reason to hope for significant improvements in this area over the next several years.},
     author = {Hailpern, B. and Santhanam, P.},
@@ -214,3 +315,22 @@
     ISSN={0098-5589}, 
     month={Nov},
 }
+
+@article{Ryder1979,
+    abstract = { The proliferation of large software systems written in high level programming languages insures the utility of analysis programs which examine interprocedural communications. Often these analysis programs need to reduce the dynamic relations between procedures to a static data representation. This paper presents one such representation, a directed, acyclic graph named the call graph of a program. We delineate the programs representable by an acyclic call graph and present an algorithm for constructing it using the property that its nodes may be linearly ordered. We prove the correctness of the algorithm and discuss the results obtained from an implementation of the algorithm in the PFORT Verifier [1].},
+    author = {Ryder, Barbara G.},
+    doi = {10.1109/TSE.1979.234183},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Graph/01702621.pdf:pdf},
+    isbn = {0098-5589},
+    issn = {00985589},
+    journal = {IEEE Transactions on Software Engineering},
+    keywords = {Fortran,Index Terms-Call graph,PFORT verifier,portability,procedure parameters,procedure references,static program analysis},
+    mendeley-groups = {Graph},
+    number = {3},
+    pages = {216--226},
+    pmid = {386},
+    title = {{Constructing the Call Graph of a Program}},
+    volume = {SE-5},
+    year = {1979}
+}
+
