--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -5,8 +5,8 @@
 % - - - - - - - - - - - - - - - - - - - -
 % Control words
 % - - - - - - - - - - - - - - - - - - - -
-\newcommand{\stg}{กราฟการเรียกเชิงสถิต}
-\newcommand{\stgen}{Static call graph}
+\newcommand{\scg}{กราฟการเรียกเชิงสถิต}
+\newcommand{\scgen}{Static call graph}
 
 \newcommand{\cfg}{กราฟการไหลของการควบคุม}
 \newcommand{\cfgen}{Control flow graph}
