Add more outline

--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,10 +1,19 @@
 \section{ที่มาและความสำคัญ} 
 
+% การทดสอบซอฟต์แวร์เป็นสิ่งที่จำเป็น และขาดไม่ได้
 ในกระบวนการพัฒนาซอฟต์แวร์ทรัพยากรมากกว่าครึ่งหนึ่งของการดำเนินโครงการทั้งงบประมาณ เครื่องมือ และบุคลากร นั้นใช้ไปในขั้นตอนการทดสอบซอฟต์แวร์ %\cite 
 ทั้งนี้ก็เพื่อตรวจสอบข้อผิดพลาดที่เกิดระหว่างการพัฒนาทั้งในชุดรหัสต้นฉบับ (Source code) ฮาร์ดแวร์ประกอบ รวมไปถึงสภาพแวดล้อมการดำเนินงาน 
 จุดประสงค์หลักก็เพื่อรับประกันคุณภาพของซอฟต์แวร์ที่พัฒนาขึ้น และรับรองการทำงานว่าสอดคล้องตามข้อกำหนดที่ระบุไว้
 
 ซึ่งกระบวนการพัฒนาซอฟต์แวร์เองได้มีการประประยุกต์วิธีการให้เข้ากับความต้องการเชิงธุรกิจที่มักเปลี่ยนแปลงอย่างรวดเร็ว ... ดังนั้นการ
+
+% การทำ Regression testing นั้นเป็นสิ่งที่ควรทำ ในการพัฒนา
+
+% การเจอข้อผิดพลาดเร็วยิ่งดี
+
+% การจัดเรียงกรณีทดสอบในช่วงการทำ Regression testing นั้นช่วยให้พบข้อผิดพลาดเร็วยิ่งขึ้น
+
+
 
 % การทดสอบซอฟต์แวร์เป็นกระบวนการสำคัญในขั้นตอนการพัฒนาซอฟต์แวร์ เพื่อให้มั่นใจได้ว่าซอฟต์แวร์นั้นสามารถทำงานได้ถูกต้องตามที่กำหนดไว้ \cite{Luo2001} 
 % ทั้งยังเป็นขั้นตอนที่ใช้บุคลากร งบประมาณ และระยะเวลาโดยรวมแล้วกว่าครึ่งหนึ่งของทรัพยากรทั้งหมดที่ใช้ในกระบวนการพัฒนาซอฟต์แวร์ \cite{singh2011} 
