Update more words

--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -25,6 +25,21 @@
 \newcommand{\TestCaseGeneration}{การสร้างข้อมูลทดสอบ}
 \newcommand{\TestCaseGenerationEN}{Test data generation}
 
+\newcommand{\RegressionTesting}{การทดสอบเชิงทดถอย}
+\newcommand{\RegressionTestingEN}{Regression Testing}
+
+\newcommand{\Repository}{คลังข้อมูล}
+\newcommand{\RepositoryEN}{Repository}
+
+\newcommand{\softwareComponent}{ส่วนประกอบซอฟต์แวร์}
+\newcommand{\softwareComponentEN}{Software component}
+
+\newcommand{\IntegrationTesting}{การทดสอบผสาน}
+\newcommand{\IntegrationTestingEN}{Integration testing}
+
+\newcommand{\MethodSignature}{Method signature}
+\newcommand{\MethodSignatureEN}{Method signature}
+
 
 % - - - - - - - - - - - - - - - - - - - -
 % NEED BY \makethesiscover
