Update final paragraph of intro

--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -18,3 +18,14 @@
 % การทดสอบซอฟต์แวร์เป็นกระบวนการสำคัญในขั้นตอนการพัฒนาซอฟต์แวร์ เพื่อให้มั่นใจได้ว่าซอฟต์แวร์นั้นสามารถทำงานได้ถูกต้องตามที่กำหนดไว้ \cite{Luo2001} 
 % ทั้งยังเป็นขั้นตอนที่ใช้บุคลากร งบประมาณ และระยะเวลาโดยรวมแล้วกว่าครึ่งหนึ่งของทรัพยากรทั้งหมดที่ใช้ในกระบวนการพัฒนาซอฟต์แวร์ \cite{singh2011} 
 % และด้วยการพัฒนาโดยใช้ภาษาในยุคที่ 4 (Fourth-generation languages - 4GLs) ที่ต้องการความรวดเร็วในกระบวนการพัฒนาแล้วด้วยนั้น ส่งผลให้ความสำคัญของกระบวนการทดสอบซอฟต์แวร์นั้นเพิ่มมากขึ้นตามไปด้วยเช่นกัน \cite{Luo2001} 
+
+% งานวิจัยนี้มีจุดประสงค์เพื่อนำเสนอวิธีการสร้างกรณีทดสอบตามเส้นทางการเรียกใช้งานระหว่างกันของคลาสที่พัฒนาขึ้นจากภาษาจาวา (Java) 
+% โดยอาศัยการวิเคราะห์เส้นทางจาก{\scg} ({\scgEN}) ที่สร้างขึ้นจาก{\sourcecode} ซึ่งรับข้อมูลจาก{\Repository} 
+% โดยอาศัยการเก็บข้อมูลในช่วง{\RegressionTesting} ({\RegressionTestingEN}) โดยกรณีทดสอบนั้นครอบคลุมการเรียกใช้ระหว่างกัน
+% ตาม{\scg}ที่สร้างขึ้นจาก
+งานวิจัยนี้มีจุดประสงค์ที่จะนำเสนอวิธีการสร้างกรณีทดสอบสำหรับ{\sourcecode}ของ{\softwareComponent}ที่นำมาทดสอบเพื่อประกอบเข้าด้วยกัน
+ในช่วงการ{\IntegrationTesting} ด้วยการเลือกเส้นทางการทดสอบที่มีน้ำหนักมากที่สุดจากเส้นทางทั้งหมดของ{\scg} 
+ซึ่งได้จากการวิเคราะห์แบบสถิตของ{\sourcecode}ที่นำมาพิจารณา โดยการสร้างกรณีทดสอบนี้จะจัดเตรียมข้อมูลทดสอบจากการพิจารณาข้อมูลค่าคงที่
+ที่จัดเก็บจาก{\sourcecode} ได้แก่ ข้อความ ตัวเลข และชุดข้อมูล เข้าร่วมกับเงื่อนไขของเส้นทาง (Path conditions) จาก{\cfg} 
+ร่วมกันเพื่อกำหนดขอบเขตการสุ่มค่าข้อมูลนำเข้าที่สอดคล้องกับ{\MethodSignature}ที่ต้องการทดสอบ
+
