Add more references

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,25 @@
 % - - - - - - - - - -
+% Call graph
+% - - - - - - - - - -
+@article{Ryder1979,
+    abstract = { The proliferation of large software systems written in high level programming languages insures the utility of analysis programs which examine interprocedural communications. Often these analysis programs need to reduce the dynamic relations between procedures to a static data representation. This paper presents one such representation, a directed, acyclic graph named the call graph of a program. We delineate the programs representable by an acyclic call graph and present an algorithm for constructing it using the property that its nodes may be linearly ordered. We prove the correctness of the algorithm and discuss the results obtained from an implementation of the algorithm in the PFORT Verifier [1].},
+    author = {Ryder, Barbara G.},
+    doi = {10.1109/TSE.1979.234183},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Graph/01702621.pdf:pdf},
+    isbn = {0098-5589},
+    issn = {00985589},
+    journal = {IEEE Transactions on Software Engineering},
+    keywords = {Fortran,Index Terms-Call graph,PFORT verifier,portability,procedure parameters,procedure references,static program analysis},
+    mendeley-groups = {Graph},
+    number = {3},
+    pages = {216--226},
+    pmid = {386},
+    title = {{Constructing the Call Graph of a Program}},
+    volume = {SE-5},
+    year = {1979}
+}
+
+% - - - - - - - - - -
 % Regression cost model
 % - - - - - - - - - -
 @article{Jiang2015,
@@ -315,22 +336,3 @@
     ISSN={0098-5589}, 
     month={Nov},
 }
-
-@article{Ryder1979,
-    abstract = { The proliferation of large software systems written in high level programming languages insures the utility of analysis programs which examine interprocedural communications. Often these analysis programs need to reduce the dynamic relations between procedures to a static data representation. This paper presents one such representation, a directed, acyclic graph named the call graph of a program. We delineate the programs representable by an acyclic call graph and present an algorithm for constructing it using the property that its nodes may be linearly ordered. We prove the correctness of the algorithm and discuss the results obtained from an implementation of the algorithm in the PFORT Verifier [1].},
-    author = {Ryder, Barbara G.},
-    doi = {10.1109/TSE.1979.234183},
-    file = {:Users/sitdh/OneDrive/Thesis/Papers/Graph/01702621.pdf:pdf},
-    isbn = {0098-5589},
-    issn = {00985589},
-    journal = {IEEE Transactions on Software Engineering},
-    keywords = {Fortran,Index Terms-Call graph,PFORT verifier,portability,procedure parameters,procedure references,static program analysis},
-    mendeley-groups = {Graph},
-    number = {3},
-    pages = {216--226},
-    pmid = {386},
-    title = {{Constructing the Call Graph of a Program}},
-    volume = {SE-5},
-    year = {1979}
-}
-
