Add more const. words

--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -6,7 +6,7 @@
 % Control words
 % - - - - - - - - - - - - - - - - - - - -
 \newcommand{\scg}{กราฟการเรียกเชิงสถิต}
-\newcommand{\scgen}{Static call graph}
+\newcommand{\scgEN}{Static call graph}
 
 \newcommand{\cfg}{กราฟการไหลของการควบคุม}
 \newcommand{\cfgen}{Control flow graph}
@@ -40,6 +40,8 @@
 \newcommand{\MethodSignature}{Method signature}
 \newcommand{\MethodSignatureEN}{Method signature}
 
+\newcommand{\DirectedMultiGraph}{กราฟหลายทางมีทิศทาง}
+\newcommand{\DirectedMultiGraphEN}{Directed Multigraph}
 
 % - - - - - - - - - - - - - - - - - - - -
 % NEED BY \makethesiscover
