Add more references

--- a/references.bib
+++ b/references.bib
@@ -19,6 +19,16 @@
     year = {1979}
 }
 
+@book{39323220090101,
+    Abstract = {Click here for a review of this titleThis book is for math and computer science majors, for students and representatives of many other disciplines (like bioinformatics, for example) taking courses in graph theory, discrete mathematics, data structures, algorithms. It is also for anyone who wants to understand the basics of graph theory, or just is curious. No previous knowledge in graph theory or any other significant mathematics is required. The very basic facts from set theory, proof techniques and algorithms are sufficient to understand it; but even those are explained in the text. Structurally, the text is divided into two parts where Part II is the generalization of Part I. The first part discusses the key concepts of graph theorywith emphasis on trees, bipartite graphs, cycles, chordal graphs, planar graphs and graph coloring. The second part considers generalizations of Part I and discusses hypertrees, bipartite hypergraphs, hypercycles, chordal hypergraphs, planar hypergraphs },
+    Author = {Voloshin, Vitaly I.},
+    ISBN = {9781606923726},
+    Publisher = {Nova Science Publishers, Inc},
+    Title = {Introduction to Graph and Hypergraph Theory.},
+    URL = {http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=393232&site=eds-live&authtype=ip,uid},
+    Year = {2009},
+}
+
 % - - - - - - - - - -
 % Regression cost model
 % - - - - - - - - - -
