--- a/related/scg-info.tex
+++ b/related/scg-info.tex
@@ -1,5 +1,16 @@
-\subsection{{\scg}\ ({\scgen})}
+\subsection{{\scg}}
 
-เป็นกราฟ
+\FirstTimeDefine{\scg}{\scgEN} เป็นกราฟที่แสดงถึงการควบคุมและส่งผ่านข้อมูลระหว่างวัตถุ สามารถบ่งบอกถึงวิธีการที่วัตถุทั้ง 2 
+นั้นเชื่อมโยงระหว่างกันได้ \cite{Ryder1979} โดยที่{\scg} มีลักษณะเป็น 
+\FirstTimeDefine{\DirectedMultiGraph}{\DirectedMultiGraphEN} กล่าวคือกราฟที่มีคู่ของโหนดใด ๆ 
+ประกอบไปด้วย\FirstTimeDefine{เส้นเชื่อม}{edge} ระหว่างกัน มากกว่าหนึ่งเส้นเชื่อม 
+และมีเส้นเชื่อมแต่ละเส้นนั้นมีทิศทาง \cite{39323220090101} ซึ่ง{\scg}จะให้ความหมายของโหนดด้วยคลาส 
+และให้ความหมายของเส้นเชื่อมด้วยเมธอด
 
-- การใช้งาน
+% - - - - - - - - - - - - - - - - - - - -
+% Example: Directed Multigraph
+% - - - - - - - - - - - - - - - - - - - -
+
+% - - - - - - - - - - - - - - - - - - - -
+% End
+% - - - - - - - - - - - - - - - - - - - -
