--- a/related/related.tex
+++ b/related/related.tex
@@ -1,6 +1,8 @@
 \section{ทฤษฎีที่เกี่ยวข้อง} 
 
-อธิบายทฤฏีที่เกี่ยวข้องกับงานที่ต้องทำ
+% ต้องปรับเพิ่ม
+เพื่อให้ทราบถึงแนวทางการวิจัยที่สามารถทำได้ จึงจำเป็นจะต้องศึกษาวิธีการ หรือทฤษฎีต่างๆ ซึ่งน่าจะเป็นประโยชน์ต่อการดำเนินการวิจัย
+ให้สามารถดำเนินได้อย่างลุล่วงไว้ดังนี้
 
 \input{related/scg-info}
 
