--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,13 @@
+@book{Myers:2004:AST:983238,
+    author = {Myers, Glenford J and Sandler, Corey},
+    isbn = {0471469122},
+    mendeley-groups = {Standard},
+    publisher = {John Wiley {\&} Sons},
+    title = {{The Art of Software Testing}},
+    year = {2004}
+}
+
+
 % - - - - - - - - - -
 % Call graph
 % - - - - - - - - - -
