--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -24,8 +24,8 @@
 % โดยอาศัยการเก็บข้อมูลในช่วง{\RegressionTesting} ({\RegressionTestingEN}) โดยกรณีทดสอบนั้นครอบคลุมการเรียกใช้ระหว่างกัน
 % ตาม{\scg}ที่สร้างขึ้นจาก
 งานวิจัยนี้มีจุดประสงค์ที่จะนำเสนอวิธีการสร้างกรณีทดสอบสำหรับ{\sourcecode}ของ{\softwareComponent}ที่นำมาทดสอบเพื่อประกอบเข้าด้วยกัน
-ในช่วงการ{\IntegrationTesting} ด้วยการเลือกเส้นทางการทดสอบที่มีน้ำหนักมากที่สุดจากเส้นทางทั้งหมดของ{\scg} 
-ซึ่งได้จากการวิเคราะห์แบบสถิตของ{\sourcecode}ที่นำมาพิจารณา โดยการสร้างกรณีทดสอบนี้จะจัดเตรียมข้อมูลทดสอบจากการพิจารณาข้อมูลค่าคงที่
-ที่จัดเก็บจาก{\sourcecode} ได้แก่ ข้อความ ตัวเลข และชุดข้อมูล เข้าร่วมกับเงื่อนไขของเส้นทาง (Path conditions) จาก{\cfg} 
-ร่วมกันเพื่อกำหนดขอบเขตการสุ่มค่าข้อมูลนำเข้าที่สอดคล้องกับ{\MethodSignature}ที่ต้องการทดสอบ
+ในช่วงการ\FirstTimeDefine{\IntegrationTesting}{\IntegrationTestingEN} ด้วยการสร้างกรณีทดสอบตามเส้นทางการทดสอบ
+ที่มีน้ำหนักมากที่สุดจากเส้นทางทั้งหมดของ{\scg} ซึ่งได้จากการวิเคราะห์แบบสถิตของ{\sourcecode}ที่นำมาพิจารณา 
+โดยการสร้างกรณีทดสอบนี้จะจัดเตรียมข้อมูลทดสอบจากการพิจารณาข้อมูลค่าคงที่ ที่จัดเก็บจาก{\sourcecode} ได้แก่ ข้อความ ตัวเลข และชุดข้อมูล 
+เข้าร่วมกับเงื่อนไขของเส้นทาง (Path conditions) จาก{\cfg} ร่วมกันเพื่อกำหนดขอบเขตการสุ่มค่าข้อมูลนำเข้าที่สอดคล้องกับ{\MethodSignature}ที่ต้องการทดสอบ
 
