--- a/limitation/limitation.tex
+++ b/limitation/limitation.tex
@@ -1,1 +1,6 @@
 \section{ขอบเขตงานวิจัย}
+
+\begin{enumerate}
+    \item รองรับเฉพาะโปรแกรมที่มีจำนวนของไซโคลเมทริกภายในคลาสรวมกันแล้วน้อยกว่าหรือเท่ากับ 15
+    \item ครอบคลุมโปรแกรมที่ทำงานเป็นลำดับ (Sequencial) เท่านั้น ยังไม่ครอบคลุมการทำงานของโปรแกรมที่ทำงานเป็นภาวะพร้อมกัน (Sequencial programming)
+\end{enumerate}
