Add more message

--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,17 +1,10 @@
 \section{ที่มาและความสำคัญ} 
 
-% การทดสอบซอฟต์แวร์เป็นสิ่งที่จำเป็น และขาดไม่ได้
-ในกระบวนการพัฒนาซอฟต์แวร์ทรัพยากรมากกว่าครึ่งหนึ่งของการดำเนินโครงการทั้งงบประมาณ เครื่องมือ และบุคลากร นั้นใช้ไปในขั้นตอนการทดสอบซอฟต์แวร์ %\cite 
-ทั้งนี้ก็เพื่อตรวจสอบข้อผิดพลาดที่เกิดระหว่างการพัฒนาทั้งในชุดรหัสต้นฉบับ (Source code) ฮาร์ดแวร์ประกอบ รวมไปถึงสภาพแวดล้อมการดำเนินงาน 
-จุดประสงค์หลักก็เพื่อรับประกันคุณภาพของซอฟต์แวร์ที่พัฒนาขึ้น และรับรองการทำงานว่าสอดคล้องตามข้อกำหนดที่ระบุไว้
+ในกระบวนการพัฒนาซอฟต์แวร์นั้น ขั้นตอนการทดสอบซอฟต์แวร์ถือเป็นช่วงที่ใช้ทรัพยากรในการดำเนินงานมากที่สุดกว่ากึ่งหนึ่งของทรัพยากรที่ใช้สำหรับพัฒนาซอฟต์แวร์ทั้งหมด 
+ทำให้เห็นได้ว่าการพัฒนาซอฟต์แวร์นั้นเป็นให้ความสำคัญต่อคุณภาพของซอฟต์แวร์เป็นอย่างมาก เพราะการทดสอบซอฟต์แวร์คือขั้นตอนที่ทำขึ้นเพื่อค้นหาข้อผิดพลาดที่อาจยังคงอยู่ในซอฟต์แวร์
+ที่อาจจังคงอยู่ภายในซอฟต์แวร์ \cite{Myers:2011:AST:983238} นอกจากนั้นแล้วยังเป็นกระบวนการที่ทำให้สามารถมั่นใจได้ถึงคุณภาพและประสิทธิภาพของซอฟต์แวร์ที่พัฒนาขึ้นด้วย[x]
 
-ซึ่งกระบวนการพัฒนาซอฟต์แวร์เองได้มีการประประยุกต์วิธีการให้เข้ากับความต้องการเชิงธุรกิจที่มักเปลี่ยนแปลงอย่างรวดเร็ว ... ดังนั้นการ
-
-% การทำ Regression testing นั้นเป็นสิ่งที่ควรทำ ในการพัฒนา
-
-% การเจอข้อผิดพลาดเร็วยิ่งดี
-
-% การจัดเรียงกรณีทดสอบในช่วงการทำ Regression testing นั้นช่วยให้พบข้อผิดพลาดเร็วยิ่งขึ้น
+การค้นหาข้อผิดพลาดที่ปรากฎอยู่ภายในซอฟต์แวร์นั้น ก็จำเป็นจะต้องสร้างกรณีทดสอบให้ครอบคลุม{\sourcecode}ที่ได้พัฒนาขึ้นให้มากที่สุดเท่าที่จะเป็นไปได้ หลายงานวิจัย [x,x,x,x]
 
 
 
