Add more package and section title setup

--- a/configures.tex
+++ b/configures.tex
@@ -3,11 +3,15 @@
 \graphicspath{ {figures/} }
 \usepackage{titlesec}
 \usepackage{pdflscape}
-\usepackage{adjustbox}
 
-\titleformat{\section}{\bfseries}{\thesection}{1.3em}{}
-\titleformat{\subsection}{\bfseries}{\thesubsection}{1em}{}
-\titleformat{\subsubsection}{\bfseries}{\thesubsubsection}{1em}{}
+\usepackage{algorithm} 
+\usepackage{algorithmic}
+
+\usepackage{rotating}
+
+\titleformat{\section}{\bfseries}{\thesection}{0.4em}{}
+\titleformat{\subsection}{\bfseries}{\thesubsection}{0.4em}{}
+\titleformat{\subsubsection}{\bfseries}{\thesubsubsection}{0.4em}{}
 
 \setlength\parindent{0.5in}
 \setlength\parskip{.5em}
