--- a/related/related.tex
+++ b/related/related.tex
@@ -4,6 +4,10 @@
 เพื่อให้ทราบถึงแนวทางการวิจัยที่สามารถทำได้ จึงจำเป็นจะต้องศึกษาวิธีการ หรือทฤษฎีต่างๆ ซึ่งน่าจะเป็นประโยชน์ต่อการดำเนินการวิจัย
 ให้สามารถดำเนินได้อย่างลุล่วงไว้ดังนี้
 
+\input{related/graph-theory}
+
+\input{related/program-paths}
+
 \input{related/scg-info}
 
 \input{related/cfg-info}
