--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -11,6 +11,9 @@
 \newcommand{\cfg}{กราฟการไหลของการควบคุม}
 \newcommand{\cfgen}{Control flow graph}
 
+\newcommand{\DDPath}{DD-Path}
+\newcommand{\DDPathEN}{Decision-to-decision Path}
+
 \newcommand{\FeasiblePath}{เส้นทางที่เป็นไปได้}
 \newcommand{\FeasiblePathEN}{Feasible path}
 
@@ -26,7 +29,7 @@
 \newcommand{\TestCaseGenerationEN}{Test data generation}
 
 \newcommand{\RegressionTesting}{การทดสอบเชิงทดถอย}
-\newcommand{\RegressionTestingEN}{Regression Testing}
+\newcommand{\RegressionTestingEN}{Regression testing}
 
 \newcommand{\Repository}{คลังข้อมูล}
 \newcommand{\RepositoryEN}{Repository}
@@ -41,7 +44,40 @@
 \newcommand{\MethodSignatureEN}{Method signature}
 
 \newcommand{\DirectedMultiGraph}{กราฟหลายทางมีทิศทาง}
-\newcommand{\DirectedMultiGraphEN}{Directed Multigraph}
+\newcommand{\DirectedMultiGraphEN}{Directed multigraph}
+
+\newcommand{\DirectedGraph}{กราฟมีทิศทาง}
+\newcommand{\DirectedGraphEN}{Directed graph}
+
+\newcommand{\StaticInformation}{ข้อมูลเชิงสถิต}
+\newcommand{\StaticInformationEN}{Static information}
+
+\newcommand{\ProgramGraph}{กราฟของโปรแกรม}
+\newcommand{\ProgramGraphEN}{Program graph}
+
+\newcommand{\BasisPath}{เส้นทางมูลฐาน}
+\newcommand{\BasisPathEN}{ฺBasis paths}
+
+\newcommand{\Node}{โหนด}
+\newcommand{\NodeEN}{Node}
+
+\newcommand{\Edge}{เส้นเชื่อม}
+\newcommand{\EdgeEN}{Edge}
+
+\newcommand{\PredicateNode}{{\Node}เงื่อนไขการดำเนินงาน}
+\newcommand{\PredicateNodeEN}{Predicate node}
+
+\newcommand{\TestPath}{เส้นทางทดสอบ}
+\newcommand{\TestPathEN}{Test path}
+
+\newcommand{\sourcenode}{โหนดต้นทาง}
+\newcommand{\sourcenodeEN}{Source node}
+
+\newcommand{\sinknode}{โหนดปลายทาง}
+\newcommand{\sinknodeEN}{Sink path}
+
+\newcommand{\Cyclometric}{Cyclomatic Complexity}
+\newcommand{\CyclometricEN}{Cyclomatic Complexity}
 
 % - - - - - - - - - - - - - - - - - - - -
 % NEED BY \makethesiscover
